--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="./assets/css/style.css" />
 		<title>Work Day Scheduler</title>
 	</head>
 
@@ -28,8 +28,12 @@
 			<p class="lead">A simple calendar app for scheduling your work day</p>
 			<p id="currentDay" class="lead"></p>
 		</header>
-		<div class="container">
-			<!-- Timeblocks go here -->
+		<main class="container">
+			<article class="row">
+				<div class="col-3">09:00</div>
+				<div class="col-7"></div>
+				<div class="col-2">Lock</div>
+			</article>
 		</div>
 
 		<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
