--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 	<body>
 		<!-- header element holding title and current date -->
 		<header class="jumbotron">
-			<h1 class="display-3">Work Day Scheduler</h1>
+			<h1 class="display-4">Work Day Scheduler</h1>
 			<p class="lead">A simple calendar app for scheduling your work day</p>
 			<p id="currentDay" class="lead"></p>
+			<h2 id="currentTime"></h2>
 		</header>
 
 		<!-- main container holding the schedule -->
@@ -35,79 +36,79 @@
 			<!-- row for 07:00 time slot -->
 			<article id="7" class="row">
 				<div class="hour col-3"><h3>07:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 08:00 time slot -->
 			<article id="8" class="row">
 				<div class="hour col-3"><h3>08:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 09:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>09:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 10:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>10:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 11:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>11:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 12:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>12:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 13:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>13:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 14:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>14:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 15:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>15:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 16:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>16:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 17:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>17:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 18:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>18:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 19:00 time slot -->
 			<article id="9" class="row">
 				<div class="hour col-3"><h3>19:00</h3></div>
-				<div class="work col-7 bg-dark"></div>
+				<div class="work col-7"></div>
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
 			</article>
 		</main>
