save events in localstorage

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<h3>07:00</h3>
 				</div>
 				<div class="work col-7">
-					<p class="event">This is some test text from a previous event!</p>
+					<p class="event"></p>
 				</div>
 
 				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
