--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
 	<body>
 		<!-- header element holding title and current date -->
-		<header class="jumbotron">
-			<h1 class="display-4">Work Day Scheduler</h1>
-			<p class="lead">A simple calendar app for scheduling your work day</p>
+		<header class="jumbotron bg-dark">
+			<h1 class="display-3">Work Day Scheduler</h1>
+			<p class="lead">A simple calendar app for scheduling your work day.</p>
 			<p id="currentDay" class="lead"></p>
-			<h2 id="currentTime"></h2>
+			<h2 id="currentTime" class="display-4"></h2>
 		</header>
 
 		<!-- main container holding the schedule -->
