--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<!-- header element holding title and current date -->
 		<header class="jumbotron bg-dark">
 			<h1 class="display-3">Work Day Scheduler</h1>
-			<p class="lead">A simple calendar app for scheduling your work day.</p>
-			<p id="currentDay" class="lead"></p>
+			<p>A simple calendar app for scheduling your work day.</p>
+			<p id="currentDay"></p>
 			<h2 id="currentTime" class="display-4"></h2>
 		</header>
 
