--- a/index.html
+++ b/index.html
@@ -35,134 +35,133 @@
 		<main class="container">
 			<!-- row for 07:00 time slot -->
 			<article id="7" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>07:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 08:00 time slot -->
 			<article id="8" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>08:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 09:00 time slot -->
 			<article id="9" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>09:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 10:00 time slot -->
 			<article id="10" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>10:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 11:00 time slot -->
 			<article id="11" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>11:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 12:00 time slot -->
 			<article id="12" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>12:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 13:00 time slot -->
 			<article id="13" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>13:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 14:00 time slot -->
 			<article id="14" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>14:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 15:00 time slot -->
 			<article id="15" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>15:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 16:00 time slot -->
 			<article id="16" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>16:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 17:00 time slot -->
 			<article id="17" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>17:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 18:00 time slot -->
 			<article id="18" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>18:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 			<!-- row for 19:00 time slot -->
 			<article id="19" class="row">
-				<div class="hour col-3">
+				<div class="hour col-3 col-sm-2 col-lg-2">
 					<h3>19:00</h3>
 				</div>
-				<div class="work col-7">
+				<div class="work col-7 col-sm-8 col-lg-9">
 					<p class="event"></p>
 				</div>
-				<div class="saveBtn col-2"><i class="fas fa-lock"></i></div>
+				<div class="saveBtn col-2 col-lg-1"><i class="fas fa-lock"></i></div>
 			</article>
 		</main>
 
